<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">i-MAV</string>
    <string name="hint_email">Email</string>
    <string name="hint_password">Password</string>
    <string name="hint_username">Username</string>
    <string name="btn_login">LOGIN</string>
    <string name="btn_register">REGISTER</string>
    <string name="btn_logout">LOGOUT</string>
    <string name="title_activity_visit_close">VisitClose</string>
    <string name="title_activity_site_list">SiteList</string>
    <string name="logout">Logout</string>
    <string name="exit">Exit</string>
    <string name="checkin">CHECK IN</string>

    <string name="title_activity_splashscreen">SplashscreenActivity</string>

    <!-- Strings related to Settings -->

    <!-- Example General settings -->

    <!-- Example settings for Data & Sync -->

    <!-- Example settings for Notifications -->

</resources>