<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@color/bg_login"
    android:orientation="vertical">

    <RelativeLayout
        android:layout_width="wrap_content"
        android:gravity="center"
        android:layout_height="wrap_content"
        android:paddingLeft="50dp"
        android:paddingRight="50dp">

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:src="@drawable/logo_login_imav_title"
            android:scaleType="centerCrop"
            android:adjustViewBounds="true"
            android:clickable="true"
            android:id="@+id/sv_img"
            android:layout_alignParentTop="true"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:padding="30dp" />

    </RelativeLayout>
    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:orientation="vertical"
        android:paddingLeft="20dp"
        android:paddingRight="20dp" >

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical" >

                <EditText
                android:id="@+id/name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:background="@color/btn_login_bg"
                android:hint="Nama Lengkap"
                android:padding="10dp"
                android:singleLine="true"
                android:inputType="textCapWords"
                android:textColor="@color/input_login"
                android:textColorHint="@color/input_login_hint" />

                <EditText
                    android:id="@+id/username"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="10dp"
                    android:background="@color/btn_login_bg"
                    android:hint="@string/hint_username"
                    android:padding="10dp"
                    android:singleLine="true"
                    android:inputType="textCapWords"
                    android:textColor="@color/input_login"
                    android:textColorHint="@color/input_login_hint"/>

                <EditText
                    android:id="@+id/email"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="10dp"
                    android:background="@color/btn_login_bg"
                    android:hint="@string/hint_email"
                    android:inputType="textEmailAddress"
                    android:padding="10dp"
                    android:singleLine="true"
                    android:textColor="@color/input_login"
                    android:textColorHint="@color/input_login_hint" />

                <EditText
                    android:id="@+id/password"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="10dp"
                    android:background="@color/btn_login_bg"
                    android:hint="@string/hint_password"
                    android:inputType="textPassword"
                    android:padding="10dp"
                    android:singleLine="true"
                    android:textColor="@color/input_login"
                    android:textColorHint="@color/input_login_hint" />

                <Spinner
                    android:id="@+id/level_spinner"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@color/btn_login_bg"
                    android:hint="User Level"
                    android:padding="10dp"
                    android:textColor="@color/primary_material_dark"
                    android:textColorHint="@color/input_register_hint"
                    android:visibility="invisible" />

                <Button
                    android:id="@+id/btnRegister"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dip"
                    android:background="@android:color/holo_orange_dark"
                    android:text="@string/btn_register"
                    android:textColor="@color/bg_login" />
            </LinearLayout>
        </ScrollView>

        <!-- Login Button -->

        <!-- Link to Login Screen -->

        <Button
            android:id="@+id/btnLinkToLoginScreen"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="40dip"
            android:background="@null"
            android:text="Sudah terdaftar? Kembali Login"
            android:textAllCaps="false"
            android:textColor="@color/register_inputbox"
            android:textSize="15dp"
            android:visibility="gone" />



    </LinearLayout>

</LinearLayout>