<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@color/bg_login"
    android:gravity="center"
    android:orientation="vertical">


    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:visibility="gone">

        <ImageView
            android:layout_alignParentRight="true"
            android:src="@drawable/menu_button"
            android:elevation="24dp"
            android:layout_width="30dp"
            android:layout_marginTop="10dp"
            android:layout_marginRight="10dp"
            android:id="@+id/menu_button"
            android:clickable="true"
            android:layout_height="20dp" />
    </RelativeLayout>

    <RelativeLayout
        android:layout_width="wrap_content"
        android:gravity="center"
        android:layout_height="wrap_content"
        android:paddingLeft="50dp"
        android:paddingRight="50dp">

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:src="@drawable/logo_login_imav_title"
            android:scaleType="centerCrop"
            android:adjustViewBounds="true"
            android:clickable="true"
            android:id="@+id/sv_img"
            android:layout_alignParentTop="true"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:padding="30dp" />

    </RelativeLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="match_parent"
        android:layout_gravity="center"
        android:orientation="vertical"
        android:paddingLeft="20dp"
        android:paddingRight="20dp"
        android:weightSum="1">

        <EditText
            android:id="@+id/username"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:background="@color/btn_login_bg"
            android:hint="@string/hint_username"
            android:inputType="textEmailAddress"
            android:padding="10dp"
            android:singleLine="true"
            android:textColor="@color/bg_login"
            android:textColorHint="@color/input_login_hint"
            android:layout_marginTop="10dp"
            android:cursorVisible="true" />

        <EditText
            android:id="@+id/password"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:background="@color/btn_login_bg"
            android:hint="@string/hint_password"
            android:inputType="textPassword"
            android:padding="10dp"
            android:singleLine="true"
            android:textColor="@color/bg_login"
            android:textColorHint="@color/input_login_hint"
            android:cursorVisible="true" />

        <!-- Login Button -->

        <Button
            android:id="@+id/btnLogin"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dip"
            android:background="@android:color/holo_orange_dark"
            android:text="@string/btn_login"
            android:textColor="@color/bg_login" />

        <!-- Link to Login Screen -->

        <Button
            android:id="@+id/btnLinkToRegisterScreen"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="40dip"
            android:background="@null"
            android:text="KLIK UNTUK DAFTAR"
            android:textAllCaps="false"
            android:textColor="@android:color/holo_orange_dark"
            android:textSize="15dp"
            android:visibility="visible" />

    </LinearLayout>

</LinearLayout>